fix(yalb-1104): alignment fix - apply brnading max width to left and right only

--- a/components/03-organisms/site-header/_yds-site-header.scss
+++ b/components/03-organisms/site-header/_yds-site-header.scss
@@ -187,7 +187,6 @@ $site-header-layout: map.deep-get(tokens.$tokens, 'site-header-layout');
   font: var(--font-style-branding-site);
   color: var(--color-site-header-site-branding);
   text-decoration: none;
-  max-width: 36.5%;
 
   &--primary {
     @media (max-width: tokens.$break-mobile-max) {
@@ -197,6 +196,12 @@ $site-header-layout: map.deep-get(tokens.$tokens, 'site-header-layout');
 
   &--mobile {
     @include branding-small;
+  }
+
+  // if left/right alignment, limit the branding width
+  [data-site-header-nav-position='left'] &,
+  [data-site-header-nav-position='right'] & {
+    max-width: 36.5%;
   }
 }
 
